<resources>
    <string name="app_name">androidui</string>
    <string name="hello_first_fragment">hello_first_fragment</string>
    <!--    form string constants-->
    <string name="productSearch">Product Search</string>
    <string name="keywordLabel">keyword</string>
    <string name="keywordErrorMessage">Please enter mandatory field</string>
    <string name="categoryLabel">category</string>
    <string name="conditionLabel">condition</string>
    <string name="formKeywordHint">Enter Keyword</string>
    <string name="formCategoryNew">New</string>
    <string name="formCategoryUsed">Used</string>
    <string name="formCategoryUnspecified">Unspecified</string>
    <string name="shippingOptionsLabel">Shipping Options</string>
    <string name="formShippingOptionsLocalPickup">Local Pickup</string>
    <string name="formShippingOptionsFreeShipping">Free Shipping</string>

    <string name="enableNearbySearchLabel">Enable Nearby Search</string>

    <string name="searchBtn">SEARCH</string>
    <string name="clearBtn">CLEAR</string>


    <!--    card_item_constant-->
    <string name="cardItemTitle">Title</string>
    <string name="cardItemZipCode">Zipcode</string>
    <string name="cardItemShipping">shipping</string>
    <string name="cardItemCondition">condition</string>
    <string name="cardItemPrice">price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>