<?xml version="1.0" encoding="utf-8"?><!-- XML implementation of Card Layout -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:layout_margin="0dp"
    app:cardCornerRadius="5dp"

    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/productTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/zipcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cardItemZipCode" />

                    <TextView
                        android:id="@+id/condition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cardItemCondition" />

                    <TextView
                        android:id="@+id/shipping"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cardItemShipping" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/cartIcon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:baselineAlignBottom="false"
                        android:src="@drawable/cart_icon" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cardItemPrice" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>

