<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/keywordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/keywordLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/keyword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:hint="@string/formKeywordHint"
            android:inputType="text"
            android:textColorHint="#8D6E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keywordLabel" />

        <TextView
            android:id="@+id/categoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/categoryLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keyword" />


        <Spinner
            android:id="@+id/category"
            android:layout_width="409dp"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryLabel" />

        <TextView
            android:id="@+id/conditionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/conditionLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.002"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category" />


        <CheckBox
            android:id="@+id/checkBoxNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/formCategoryNew"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/conditionLabel" />

        <CheckBox
            android:id="@+id/checkBoxUsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/formCategoryUsed"
            app:layout_constraintStart_toEndOf="@+id/checkBoxNew"
            app:layout_constraintTop_toBottomOf="@+id/conditionLabel" />

        <CheckBox
            android:id="@+id/checkBoxUnspecified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/formCategoryUnspecified"
            app:layout_constraintStart_toEndOf="@+id/checkBoxUsed"
            app:layout_constraintTop_toBottomOf="@+id/conditionLabel" />

        <TextView
            android:id="@+id/shippingOptionsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/shippingOptionsLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxNew" />


        <CheckBox
            android:id="@+id/checkBoxLocalPickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/formShippingOptionsLocalPickup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shippingOptionsLabel" />

        <CheckBox
            android:id="@+id/checkBoxFreeShipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/formShippingOptionsFreeShipping"
            app:layout_constraintStart_toEndOf="@+id/checkBoxLocalPickup"
            app:layout_constraintTop_toBottomOf="@+id/shippingOptionsLabel" />

        <TextView
            android:id="@+id/enableNearbySearchLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/enableNearbySearchLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxLocalPickup" />

        <CheckBox
            android:id="@+id/enableNearbySearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:text=""
            app:layout_constraintStart_toEndOf="@+id/enableNearbySearchLabel"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxFreeShipping" />

<!--        <Button-->
<!--            android:id="@+id/searchBtn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="36dp"-->
<!--            android:layout_marginTop="44dp"-->
<!--            android:text="@string/searchBtn"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/enableNearbySearchLabel" />-->

<!--        <Button-->
<!--            android:id="@+id/clearBtn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="56dp"-->
<!--            android:layout_marginTop="44dp"-->
<!--            android:text="@string/clearBtn"-->
<!--            app:layout_constraintStart_toEndOf="@+id/searchBtn"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/enableNearbySearchLabel" />-->


        <Button
            android:id="@+id/searchBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:letterSpacing="0.2"
            android:text="SEARCH"
            android:textAllCaps="true"
            android:textColor="@color/productSearchBtnTxtClr"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enableNearbySearchLabel" />

        <Button
            android:id="@+id/clearBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="68dp"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:letterSpacing="0.2"
            android:text="CLEAR"
            android:textAllCaps="true"
            android:textColor="@color/productSearchBtnTxtClr"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/searchBtn"
            app:layout_constraintTop_toBottomOf="@+id/enableNearbySearchLabel" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>